fixing the contrast errors for the a tags.

--- a/lesson2/css/main.css
+++ b/lesson2/css/main.css
@@ -38,7 +38,11 @@ main h3{
 }
 
 main a{
-    color: white;
+    color: black;
+}
+
+main a:visited {
+    color: navy;
 }
 
 main img{
